--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,9 @@ spring:
         show_sql: true
         use_sql_comments: true
         format_sql: true
-
+  jackson:
+    mapper:
+      DEFAULT_VIEW_INCLUSION: true
 
 jwt:
   auth:
