--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,16 @@ spring:
   jackson:
     mapper:
       DEFAULT_VIEW_INCLUSION: true
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: admin
+    password: admin
+  cloud:
+    bus:
+      enabled: true
+      refresh:
+        enabled: true
 
 jwt:
   auth:
