include error message in responsestatusexception

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,6 +52,7 @@ server:
     context-path: /api
   error:
     include-stacktrace: "never"
+    include-message: "always"
 
 serviceoffering-orchestrator:
   base-uri: http://localhost:8084/api
