add global cors config bean and profiles

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,3 +59,9 @@ serviceoffering-orchestrator:
 
 organizations-orchestrator:
   base-uri: http://localhost:8082/api
+
+cors:
+  global:
+    origins: >
+      http://localhost:4200
+    patterns:
