set file max size to 2mb for file uploads

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,6 +35,9 @@ spring:
       enabled: true
       refresh:
         enabled: true
+  servlet:
+    multipart:
+      max-file-size: 2MB
 
 jwt:
   auth:
