--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -50,3 +50,12 @@ cors:
     origins:
     patterns: >
       http://localhost:[*]
+
+s3-library:
+  access-key: key
+  secret: secret
+  service-endpoint: endpoint
+  signing-region: de
+  signer-type: S3SignerType
+  bucket: merlot-storage-test
+  root-directory: contract-orchestrator
