change username and token again

--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -34,8 +34,8 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
-          GITHUB_USER: ${{ secrets.GITHUB_ACTOR }}
+          GITHUB_TOKEN: ${{ github.token }}  # Needed to get PR information, if any
+          GITHUB_USER: ${{ github.actor }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: mvn -s settings.xml -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=merlot-education_contract-orchestrator_AYiLA82cNJyPCeUvG50n
