--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -37,4 +37,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-        run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} GITHUB_USER=${{ github.actor }} mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=merlot-education_contract-orchestrator_AYiLA82cNJyPCeUvG50n
+        run: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }} GITHUB_USER=${{ github.actor }} mvn -e -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=merlot-education_contract-orchestrator_AYiLA82cNJyPCeUvG50n
