--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,6 +63,9 @@ serviceoffering-orchestrator:
 organizations-orchestrator:
   base-uri: http://localhost:8082/api
 
+pdf-service:
+  base-uri: https://localhost:7131/PdfProcessor/
+
 management:
   endpoints:
     enabled-by-default: false
