--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
             <artifactId>s3-library</artifactId>
             <version>1.0.2-d5a5f95</version>
         </dependency>
+       <dependency>
+            <groupId>eu.merlot-education</groupId>
+            <artifactId>authorization-library</artifactId>
+            <version>0.0.10-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
