--- a/pom.xml
+++ b/pom.xml
@@ -134,10 +134,11 @@
             <artifactId>s3-library</artifactId>
             <version>1.0.2-d5a5f95</version>
         </dependency>
-       <dependency>
+        <dependency>
             <groupId>eu.merlot-education</groupId>
             <artifactId>authorization-library</artifactId>
             <version>0.0.3-eb99003</version>
+        </dependency>
         <dependency>
             <groupId>eu.merloteducation.modelslib</groupId>
             <artifactId>modelslib</artifactId>
