Switch to did web as participant id

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -62,3 +62,5 @@ s3-library:
   signer-type: S3SignerType
   bucket: merlot-storage-test
   root-directory: contract-orchestrator
+
+merlot-domain: "marketplace.dev.merlot-education.eu"
