--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -21,6 +21,12 @@ spring:
   jackson:
     mapper:
       DEFAULT_VIEW_INCLUSION: true
+  rabbitmq:
+    listener:
+      direct:
+        auto-startup: false
+      simple:
+        auto-startup: false
 
 jwt:
   auth:
