--- a/src/main/resources/application-demo.yml
+++ b/src/main/resources/application-demo.yml
@@ -4,5 +4,16 @@ cors:
       https://marketplace.demo.merlot-education.eu
     patterns:
 
+spring:
+  h2:
+    console.enabled: false
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://auth-service.demo.merlot-education.eu
+          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/oauth2/jwks
+          userinfo-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/userinfo
+
 s3-library:
   bucket: merlot-storage-demo
