--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -15,5 +15,7 @@ spring:
           jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/oauth2/jwks
           userinfo-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/userinfo
 
+jwt-auth-converter: ssiJwtAuthConverter
+
 s3-library:
   bucket: merlot-storage-dev
